# qt_simple_calculator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/calculator/: calculator.cpp  calculator.h
src/mainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
